Fix issue with header overflow on mobile browsers

--- a/_header.scss
+++ b/_header.scss
@@ -7,14 +7,15 @@ header {
 	padding: 5rem 2rem;
 
 	&:before {
+		background: url(header.svg) center center no-repeat;
+		background-size: cover;
 		content: "";
 		position: absolute;
-		width: 300%;
-		height: 300%;
-		top: -100%;
-		left: -100%;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
 		z-index: -1;
-		background: url(header.svg) center center no-repeat;
 	}
 
 	h1 {
