--- a/style.css
+++ b/style.css
@@ -105,14 +105,15 @@ header {
   padding: 5rem 2rem;
 }
 header:before {
+  background: url(header.svg) center center no-repeat;
+  background-size: cover;
   content: "";
   position: absolute;
-  width: 300%;
-  height: 300%;
-  top: -100%;
-  left: -100%;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   z-index: -1;
-  background: url(header.svg) center center no-repeat;
 }
 header h1 {
   font-family: "Oswald", sans-serif;
